# insiders-test

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yaml
.github/workflows/: pages.yaml
assets/javascripts/: bundle.96d2b699.min.js
blog/: index.html
blog/archive/2009/: index.html
blog/archive/2010/: index.html
blog/archive/2011/: index.html
blog/archive/2013/: index.html
blog/archive/2016/: index.html
blog/category/business/: index.html
blog/category/dallas-makerspace/: index.html
blog/category/events/: index.html
blog/category/firearms/: index.html
blog/category/humor/: index.html
blog/category/politics/: index.html
blog/category/technology/: index.html
blog/category/tutorials/: index.html
blog/page/2/: index.html
content/: index.md
content/blog/: .authors.yml  .meta.yml
content/guides/: macos-setup.md  mkdocs-material-insider-github-pages-action.md  nginx-proxy-manager-udmp.md  rpi-k8s-talos-terraform.md
content/literary/: recommended-reading.md
content/projects/: battery-backup.md  jeep.md
content/smart-home/: garage-door.md  switches.md
guides/macos-setup/: index.html
guides/mkdocs-material-insider-github-pages-action/: index.html
guides/nginx-proxy-manager-udmp/: index.html
guides/rpi-k8s-talos-terraform/: index.html
literary/recommended-reading/: index.html
projects/battery-backup/: index.html
projects/jeep/: index.html
search/: search_index.json
smart-home/architecture/: index.html
smart-home/garage-door/: index.html
smart-home/switches/: index.html
(+45 files in other folders)
