[tool.poetry]
name = "binbook2023"
version = "0.1.0"
description = ""
authors = ["Mats Schwieger <mats.schwieger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = {git = "https://github.com/squidfunk/mkdocs-material-insiders.git"}
mkdocs-minify-plugin = "^0.6.2"
pillow = "^9.4.0"
cairosvg = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
